--- a/package.json
+++ b/package.json
@@ -16,14 +16,20 @@
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@react-pdf-viewer/scroll-mode": "^3.12.0",
+    "@tsparticles/react": "^3.0.0",
     "@vercel/analytics": "^1.1.1",
+    "copy-webpack-plugin": "^12.0.2",
     "framer-motion": "^10.16.4",
     "image-js": "^0.35.5",
     "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
-    "three": "^0.157.0"
+    "react-pdf": "^7.7.1",
+    "react-pdf-viewer": "^0.1.0",
+    "three": "^0.157.0",
+    "tsparticles-preset-snow": "^2.12.0"
   },
   "devDependencies": {
     "eslint": "^8.52.0",
