--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "griffin-homepage",
+  "name": "griffin-webapp",
   "version": "1.0.0",
   "description": "Griffin Ryan's portfolio webapp",
   "scripts": {
