--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@tsparticles/react": "^3.0.0",
     "@vercel/analytics": "^1.1.1",
     "framer-motion": "^10.16.4",
     "image-js": "^0.35.5",
@@ -23,7 +24,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
-    "three": "^0.157.0"
+    "three": "^0.157.0",
+    "tsparticles": "^3.3.0"
   },
   "devDependencies": {
     "eslint": "^8.52.0",
