--- a/package.json
+++ b/package.json
@@ -12,19 +12,19 @@
   "author": "Griffin Ryan",
   "license": "MIT",
   "dependencies": {
-    "@chakra-ui/icons": "^2.1.1",
-    "@chakra-ui/react": "^2.8.1",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@vercel/analytics": "^1.1.1",
-    "framer-motion": "^10.16.4",
-    "image-js": "^0.35.5",
-    "next": "^14.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0",
-    "react-p5": "^1.4.1",
-    "three": "^0.157.0"
+    "@chakra-ui/icons": "2.1.1",
+    "@chakra-ui/react": "2.8.1",
+    "@emotion/react": "11.11.1",
+    "@emotion/styled": "11.11.0",
+    "@vercel/analytics": "1.1.1",
+    "framer-motion": "10.16.4",
+    "image-js": "0.35.5",
+    "next": "14.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "4.11.0",
+    "react-p5": "1.4.1",
+    "three": "0.157.0"
   },
   "devDependencies": {
     "eslint": "^8.52.0",
