--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@chakra-ui/react": "2.8.1",
     "@emotion/react": "11.11.1",
     "@emotion/styled": "11.11.0",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@vercel/analytics": "1.1.1",
     "framer-motion": "10.16.4",
     "image-js": "0.35.5",
-    "next": "14.1.0",
+    "next": "^14.2.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "4.11.0",
