--- a/package.json
+++ b/package.json
@@ -19,15 +19,16 @@
     "@vercel/analytics": "1.5.0",
     "framer-motion": "11.14.4",
     "image-js": "0.37.0",
-    "next": "14.2.30",
+    "next": "15.4.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "5.5.0",
     "react-pdf": "^9.1.1",
+    "sharp": "^0.34.3",
     "three": "0.178.0"
   },
   "devDependencies": {
     "eslint": "^8.57.1",
-    "eslint-config-next": "^14.2.30"
+    "eslint-config-next": "^15.4.5"
   }
 }
